# telegram-backup-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: push-to-vps.sh  telegram-media-archiver.service
src/tg_media_archiver/: archiver.py  cli.py  config.py  storage.py  uploader.py
tests/: test_archiver.py
